--- a/index.html
+++ b/index.html
@@ -10,21 +10,34 @@
         <script src="/js/foundation.dropdown.js"></script>
         <script src="/js/foundation.tab.js"></script>
         <script src="js/foundation/foundation.topbar.js"></script>
+        <meta class="foundation-mq-small">
+        <meta class="foundation-mq-small-only">
+        <meta class="foundation-mq-medium">
+        <meta class="foundation-mq-medium-only">
+        <meta class="foundation-mq-large">
+        <meta class="foundation-mq-large-only">
+        <meta class="foundation-mq-xlarge">
+        <meta class="foundation-mq-xlarge-only">
+        <meta class="foundation-mq-xxlarge">
+        <meta class="foundation-data-attribute-namespace">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta class="foundation-mq-topbar">
+        <script src="../assets/js/modernizr.js"></script>
     </head>
     <body>
         <nav class="top-bar" data-topbar role="navigation">
-          <ul class="title-area">
-            <li class="name">
-              <h1><a href="#">My Site</a></h1>
-            </li>
-             <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-          </ul>
-
-          <section class="top-bar-section">
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="#">Club de investigacion</a></h1>
+                </li>
+                <li class="divider"></li><!--divider-->
+                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+            </ul>
+        <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-              <li class="active"><a href="#">Contactar</a></li>
+                <li class="active"><a href="#">Contactar</a></li>
             </ul>
 
             <!-- Left Nav Section -->
