--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-                <li class="active"><a href="#">Contactar</a></li>
+                <li class="active"><a href="#">Viajes</a></li>
+                <li><a href="#">Informacion</a></li>
             </ul>
-
             <!-- Left Nav Section -->
             <ul class="left">
               
